Fix radio group error notice visibility (#579)
* Fix radio group error notice visibility

* Tweak height/width of hidden checkbox/radio

--- a/.dev/assets/shared/css/elements/forms.css
+++ b/.dev/assets/shared/css/elements/forms.css
@@ -42,7 +42,9 @@ input[type="color"] {
 
 input[type="radio"],
 input[type="checkbox"] {
-	appearance: none;
+	height: 19px;
+	opacity: 0;
+	width: 20px;
 }
 
 .coblocks-field {
